# HackerRank

./: .gitignore
sherlock_anagrams/: CMakeLists.txt
sherlock_anagrams/include/sherlock_anagrams/: sherlock.hpp
sherlock_anagrams/src/: sherlock.cpp
sherlock_anagrams/test/: test_main.cpp
